# evidence-checker

./: .env.example  .gitignore  Dockerfile  Dockerfile.minimal  Makefile  Proposal.txt  Purpose.txt  README.md  api_specification.md  docker-compose.yml  evidence_checker_web.html  macos_usage_guide.html  project_structure.md  prompt_byChatgpt.md  pyproject.toml  requirements-minimal.txt  rubric_detailed.md  scoring_byClaude.md  test_main_with_normalizer.py
scoring_byChatGPT0817/: README.md  input_schema.json  output_schema.json  sample_payload.json  score_engine.py
src/: config.py  database.py  main.py
src/api/: health.py  score.py
src/core/: extract.py  literature_searcher.py  medical_normalizer_v2.py  nli.py  scoring.py  staged_evaluator.py
src/utils/: evaluation_logger.py  pubmed.py
tests/: test_api.py  test_extract.py  test_integration.py  test_nli.py  test_scoring.py
