[project]
name = "evidence-checker"
version = "0.1.0"
description = "Evidence-based claim evaluation tool"
authors = [
    {name = "Evidence Checker Project"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "ginza (>=5.2.0,<6.0.0)",
    "ja-ginza (>=5.2.0,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "biopython (>=1.85,<2.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

